--- a/1. Dataset Creation/dataset_creation.ipynb
+++ b/1. Dataset Creation/dataset_creation.ipynb
@@ -5,8 +5,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. DATASET CREATION\n",
-    "*Creating Pandas Dataframe containing all the songs from [Songs used in commercials](https://www.songfacts.com/category/songs-used-in-commercials) and their Spotify ID.*"
+    "# DATASET CREATION\n",
+    "*Creating Pandas Dataframe containing all the songs from [Songs used in commercials](https://www.songfacts.com/category/songs-used-in-commercials), their Spotify ID and their acoustic features.*"
    ]
   },
   {
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.1. Importing Libraries"
+    "### Importing Libraries and Connecting to *Spotify API*"
    ]
   },
   {
@@ -22,17 +22,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Importing ``pandas`` and ``spotify.py`` module to access* Spotify *API.*"
+    "*Importing ``pandas``, ``numpy`` and ``spotify.py`` module to access* Spotify *API.*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from spotify import SpotifyAPI\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -40,7 +41,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.2. Reading Songs"
+    "*Accessing* Spotify API *with user credentials.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client_id = '_CLIENT_ID_' # Add your client ID here\n",
+    "client_secret = '_SECRET_ID_' # Add your secret ID here\n",
+    "spoti = SpotifyAPI(client_id, client_secret)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Reading Songs and Collecting Their Spotify ID"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.1 Reading Songs"
    ]
   },
   {
@@ -67,26 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.3. Accessing *Spotify* API"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client_id = '_CLIENT_ID_' # Add your client ID here\n",
-    "client_secret = '_SECRET_ID_' # Add your secret ID here\n",
-    "spoti = SpotifyAPI(client_id, client_secret)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1.4. Retrieving *Spotify* IDs"
+    "### 1.2 Retrieving *Spotify* IDs"
    ]
   },
   {
@@ -119,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.5. DataFrame Creation and Exporting ``csv`` File"
+    "### 1.3 DataFrame Creation and Exporting"
    ]
   },
   {
@@ -193,6 +202,112 @@
    "outputs": [],
    "source": [
     "songs_df.to_csv('songs.csv', index = False)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Extracting Acoustic Features"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Loading ``songs.csv`` from folder.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "songs_df = pd.read_csv(\"songs.csv\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1 Defining Features"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Defining a list of features to retrieve and creating an empty python dictionary*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = ['danceability', 'energy', 'loudness', 'speechiness', 'acousticness', 'instrumentalness', 'liveness', 'valence', 'tempo']\n",
+    "feat_dict = {f:[] for f in features}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2 Retrieving Features"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Populating the feature dictionary with values retrieved with* Spotify API.\\\n",
+    "***Note:*** *``max_ids`` defines the maximum numbers of IDs for which* Spotify *allows to retrieve values with one single request (i.e. 100).*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IDs = list(songs_df['ID'])\n",
+    "max_ids = 100\n",
+    "cuts = [i*max_ids for i in range(1,len(IDs)//max_ids+1)]\n",
+    "IDs = np.split(IDs, cuts)\n",
+    "\n",
+    "for idx in IDs:\n",
+    "    idx = idx.tolist()\n",
+    "    res = spoti.get_features(idx)['audio_features']\n",
+    "    for feat in features:\n",
+    "        for song in res:\n",
+    "            feat_dict[feat].append(song[feat])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3 Updating DataFrame and Exporting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feat_df = pd.DataFrame(feat_dict, columns = features)\n",
+    "feat_df = pd.concat([songs_df, feat_df], axis = 1)\n",
+    "feat_df.to_csv(\"features.csv\", index = False)"
    ]
   }
  ],
